[package]
name = "rust-events"
version = "0.1.0"
authors = ["JP Moresmau <jp@moresmau.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = "0.33.1"
serde = {version= "1.0.105", features = ["derive"]}
serde_json = "1.0.48"
log = "0.4.8"
env_logger = "0.7.1"