[package]
name = "rust_events_rabbit"
version = "0.1.0"
authors = ["JP Moresmau <jp@moresmau.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = "0.34.0"
rust_events = { path = "../rust_events" }
rust_events_derive = { path = "../rust_events_derive" }
serde = {version= "1.0.105", features = ["derive"]}
serde_json = "1.0.48"
log = "0.4.8"
env_logger = "0.7.1"